--- a/index.html
+++ b/index.html
@@ -109,40 +109,33 @@
         <p>Conseil : à tester sur des petits projets</p>
     </section>
 </section>
-<!-- Example of nested vertical slides -->
 <section>
-    <section>
-        <h2>Vertical Slides</h2>
-
-        <p>
-            Slides can be nested inside of other slides,
-            try pressing <a href="#" class="navigate-down">down</a>.
-        </p>
-        <a href="#" class="image navigate-down">
-            <img width="178" height="238" src="https://s3.amazonaws.com/hakim-static/reveal-js/arrow.png" alt="Down arrow">
-        </a>
-    </section>
-    <section>
-        <h2>Basement Level 1</h2>
-
-        <p>Press down or up to navigate.</p>
-    </section>
-    <section>
-        <h2>Basement Level 2</h2>
-
-        <p>Cornify</p>
-        <a class="test" href="http://cornify.com">
-            <img width="280" height="326" src="https://s3.amazonaws.com/hakim-static/reveal-js/cornify.gif" alt="Unicorn">
-        </a>
-    </section>
-    <section>
-        <h2>Basement Level 3</h2>
-
-        <p>That's it, time to go back up.</p>
-        <a href="#/2" class="image">
-            <img width="178" height="238" src="https://s3.amazonaws.com/hakim-static/reveal-js/arrow.png" alt="Up arrow" style="-webkit-transform: rotate(180deg);">
-        </a>
-    </section>
+    <h2>Alternative</h2>
+    <p>
+        Chroot minimaliste avec configuration automatisée.
+    </p>
+    <ul>
+        <li>Les plus
+            <ul>
+                <li>Commitable</li>
+                <li>Évolutif</li>
+                <li>Transportable</li>
+                <li>Léger</li>
+            </ul>
+        </li>
+        <li>Les moins
+            <ul>
+                <li>Quelques configurations parfois tricky</li>
+                <li>Temps de mise en place</li>
+            </ul>
+        </li>
+    </ul>
+</section>
+<section>
+    <h2>Quel outil choisir ?</h2>
+    <p>
+        <img width="100" height="100" src="img/puppet.png" alt="Puppet labs"> VS <img src="img/ansible.png" alt="Ansible works">
+    </p>
 </section>
 
 <section>
