--- a/index.html
+++ b/index.html
@@ -202,6 +202,11 @@ class intellij ( $username ) {
     </section>
 </section>
 
+
+<section>
+    <h1>Conclusion</h1>
+    <p>Il faut automatiser<strong class="fragment">...&nbsp;jusqu'à quel point?</strong></p>
+</section>
 <section>
     <h2>Slides</h2>
 
