modification de la page des chiffres

--- a/index.html
+++ b/index.html
@@ -193,7 +193,8 @@ class intellij ( $username ) {
 
     <section>
         <h3>Quelques chiffres</h3>
-        <p>Projets Contactless chez MBS</p>
+        <p>Chroot Contactless chez MBS</p>
+        <p>3 équipes (bonne idée?)</p>
         <p>1523 lignes de code puppet</p>
         <p>41 fichiers puppet</p>
         <p>80 fichiers</p>
