added puppet demo

--- a/index.html
+++ b/index.html
@@ -142,6 +142,11 @@
 
 <section>
     <section>
+        <h2>Puppet</h2>
+        <p>2 modes : Client/Server ou standalone</p>
+        <p>Installation dans la chroot</p>
+    </section>
+    <section>
         <h2>Puppet en standalone</h2>
         <pre>
             <code data-trim>
@@ -203,7 +208,11 @@ class intellij ( $username ) {
     </section>
 </section>
 
-
+<section>
+    <section>
+        <h2>Ansible</h2>
+    </section>
+</section>
 <section>
     <h1>Conclusion</h1>
     <p>Il faut automatiser<strong class="fragment">...&nbsp;jusqu'à quel point?</strong></p>
