added chroot size

--- a/index.html
+++ b/index.html
@@ -200,6 +200,7 @@ class intellij ( $username ) {
         <h3>Quelques chiffres</h3>
         <p>Chroot Contactless chez MBS</p>
         <p>3 équipes (bonne idée?)</p>
+	<p>41G dont 1G de .m2</p>
         <p>1523 lignes de code puppet</p>
         <p>41 fichiers puppet</p>
         <p>80 fichiers</p>
