--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <section>
     <h1>Automatisation du poste de dev</h1>
 
-    <h3>Chroot/Ansible/Puppet/Vagrant</h3>
+    <h3>Chroot/Ansible/Puppet</h3>
 </section>
 
 <section>
