--- a/index.html
+++ b/index.html
@@ -43,17 +43,7 @@
 </section>
 
 <section>
-    <h2>Chroot ?</h2>
-    <blockquote cite="http://fr.wikipedia.org/wiki/Chroot">
-        &ldquo;chroot (<b>ch</b>ange <b>root</b>) est une commande des systèmes d'exploitation UNIX permettant de changer le répertoire racine d'un processus de la machine hôte.&rdquo;
-    </blockquote>
-    <aside class="notes">
-        chroot prison
-    </aside>
-</section>
-
-<section>
-    <h2>Pourquoi une chroot ?</h2>
+    <h2>Pourquoi ?</h2>
     <ul>
         <li>Temps d'installation d'un poste de dév long</li>
         <li>Upgrade/Migration de son poste ?</li>
@@ -66,6 +56,16 @@
         combien ont perdu du temps avec un wiki non à jour ?
         combien n'ont pas osé mettre à jour leur machine de peur de tout péter ?
         combien ont été freiné en binomant en ne retrouvant pas le même environnement ?
+    </aside>
+</section>
+
+<section>
+    <h2>Chroot ?</h2>
+    <blockquote cite="http://fr.wikipedia.org/wiki/Chroot">
+        &ldquo;chroot (<b>ch</b>ange <b>root</b>) est une commande des systèmes d'exploitation UNIX permettant de changer le répertoire racine d'un processus de la machine hôte.&rdquo;
+    </blockquote>
+    <aside class="notes">
+        chroot prison
     </aside>
 </section>
 
