--- a/index.html
+++ b/index.html
@@ -91,6 +91,9 @@
 
     </section>
     <section>
+        <h2>Démo</h2>
+    </section>
+    <section>
         <h3>Configurer une chroot à la main</h3>
         <ul>
             <li>Les plus
@@ -144,7 +147,17 @@
     <section>
         <h2>Puppet</h2>
         <p>2 modes : Client/Server ou standalone</p>
-        <p>Installation dans la chroot</p>
+        <blockquote cite="http://en.wikipedia.org/wiki/Puppet_%28software%29">
+            &ldquo;Puppet is a tool designed to manage the configuration of Unix-like and Microsoft Windows systems declaratively.&rdquo;
+        </blockquote>
+        <p></p>
+    </section>
+    <section>
+        <h2>Puppet</h2>
+        <p>Principe</p>
+        <p>Installation sur le poste client (apt-get install puppet)</p>
+        <p>Déclaration des actions dans des fichiers .pp</p>
+        <p>Déclaration des dépendances entre les actions</p>
     </section>
     <section>
         <h2>Puppet en standalone</h2>
@@ -195,7 +208,9 @@ class intellij ( $username ) {
             </code>
         </pre>
     </section>
-
+    <section>
+        <h2>Démo</h2>
+    </section>
     <section>
         <h3>Quelques chiffres</h3>
         <p>Chroot Contactless chez MBS</p>
@@ -212,216 +227,101 @@ class intellij ( $username ) {
 <section>
     <section>
         <h2>Ansible</h2>
+        <blockquote cite="http://en.wikipedia.org/wiki/Puppet_%28software%29">
+            &ldquo;Ansible is an open-source software platform for configuring and managing computers.&rdquo;
+        </blockquote>
     </section>
+    <section>
+        <h2>Ansible</h2>
+        <p>Principe</p>
+        <p>Installation sur le serveur (git clone)</p>
+        <p>Déclaration des taches dans des fichiers .yml</p>
+        <p>Regroupement des taches dans des playbooks</p>
+    </section>
+    <section>
+        <h2>Ansible</h2>
+        <pre>
+            <code data-trim>
+- hosts: gitlab
+    sudo: yes
+    tasks:
+        - name: ensure app apt dependencies are installed
+          action: apt pkg=$item
+          with_items:
+            - build-essential
+            - zlib1g-dev
+            - libyaml-dev
+            - libssl-dev
+            - libgdbm-dev
+            - libreadline-dev
+            - libncurses5-dev
+            - libffi-dev
+            - curl
+            - git-core
+            - redis-server
+            - checkinstall
+            - libxml2-dev
+            - libxslt1-dev
+            - libcurl4-openssl-dev
+            - libicu-dev
+            - python-docutils
+            - libmysqlclient-dev
+            - python-mysqldb
+            </code>
+        </pre>
+    </section>
+    <section>
+        <h2>Ansible</h2>
+        <pre>
+            <code data-trim>
+# 4. GitLab shell
+- hosts: gitlab
+    sudo: yes
+    sudo_user: git
+    vars_files:
+        - vars.yml
+    tasks:
+        - name: ensure Gitlab-Shell git repository is cloned
+          git: repo=https://github.com/gitlabhq/gitlab-shell.git dest=/home/git/gitlab-shell version=v1.7.1
+        - name: ensure gitlab-shell config is written
+          action: template src=templates/gitlab_shell_config.yml.tmpl dest=/home/git/gitlab-shell/config.yml mode=0755
+        - name: ensure gitlab-shell is installed
+          command: /home/git/gitlab-shell/bin/install
+            </code>
+        </pre>
+    </section>
+    <section>
+        <h2>Démo</h2>
+    </section>
+</section>
+<section>
+    <h2>Le mix Chroot/Ansible</h2>
+    <ul>
+        <li>Création de la chroot
+            <ul>
+                <li>Debootstrap avec serveur ssh</li>
+                <li>Customization de la chroot (port ssh, script d'init,...)</li>
+            </ul>
+        </li>
+        <li>Script de lancement de la chroot
+            <ul>
+                <li>Mount de /dev /proc /sys</li>
+                <li>Lancement d'un serveur ssh</li>
+                <li>Lancement d'ansible</li>
+            </ul>
+        </li>
+        <li>Script d'arrêt de la chroot
+            <ul>
+                <li>Tue tous les process lancés dans la chroot</li>
+                <li>Umount de /dev /proc /sys</li>
+            </ul>
+        </li>
+    </ul>
+
 </section>
 <section>
     <h1>Conclusion</h1>
     <p>Il faut automatiser<strong class="fragment">...&nbsp;jusqu'à quel point?</strong></p>
-</section>
-<section>
-    <h2>Slides</h2>
-
-    <p>
-        Not a coder? No problem. There's a fully-featured visual editor for authoring these, try it out at <a href="http://slid.es" target="_blank">http://slid.es</a>.
-    </p>
-</section>
-
-<section>
-    <h2>Point of View</h2>
-
-    <p>
-        Press <strong>ESC</strong> to enter the slide overview.
-    </p>
-
-    <p>
-        Hold down alt and click on any element to zoom in on it using <a href="http://lab.hakim.se/zoom-js">zoom.js</a>. Alt + click anywhere to zoom back out.
-    </p>
-</section>
-
-<section data-markdown>
-    <script type="text/template">
-        ## Markdown support
-
-        For those of you who like that sort of thing. Instructions and a bit more info available [here](https://github.com/hakimel/reveal.js#markdown).
-
-        ```
-        <section data-markdown>
-            ## Markdown support
-
-            For those of you who like that sort of thing.
-            Instructions and a bit more info available [here](https://github.com/hakimel/reveal.js#markdown).
-        </section>
-        ```
-    </script>
-</section>
-
-<section id="transitions">
-    <h2>Transition Styles</h2>
-
-    <p>
-        You can select from different transitions, like: <br>
-        <a href="?transition=cube#/transitions">Cube</a> -
-        <a href="?transition=page#/transitions">Page</a> -
-        <a href="?transition=concave#/transitions">Concave</a> -
-        <a href="?transition=zoom#/transitions">Zoom</a> -
-        <a href="?transition=linear#/transitions">Linear</a> -
-        <a href="?transition=fade#/transitions">Fade</a> -
-        <a href="?transition=none#/transitions">None</a> -
-        <a href="?#/transitions">Default</a>
-    </p>
-</section>
-
-<section id="themes">
-    <h2>Themes</h2>
-
-    <p>
-        Reveal.js comes with a few themes built in: <br>
-        <a href="?theme=sky#/themes">Sky</a> -
-        <a href="?theme=beige#/themes">Beige</a> -
-        <a href="?theme=simple#/themes">Simple</a> -
-        <a href="?theme=serif#/themes">Serif</a> -
-        <a href="?theme=night#/themes">Night</a> -
-        <a href="?#/themes">Default</a>
-    </p>
-
-    <p>
-        <small>
-            * Theme demos are loaded after the presentation which leads to flicker. In production you should load your theme in the <code>&lt;head&gt;</code> using a <code>&lt;link&gt;</code>.
-        </small>
-    </p>
-</section>
-
-<section>
-    <h2>Global State</h2>
-
-    <p>
-        Set <code>data-state="something"</code> on a slide and <code>"something"</code>
-        will be added as a class to the document element when the slide is open. This lets you
-        apply broader style changes, like switching the background.
-    </p>
-</section>
-
-<section data-state="customevent">
-    <h2>Custom Events</h2>
-
-    <p>
-        Additionally custom events can be triggered on a per slide basis by binding to the <code>data-state</code> name.
-    </p>
-					<pre><code data-trim contenteditable style="font-size: 18px; margin-top: 20px;">
-                        Reveal.addEventListener( 'customevent', function() {
-                        console.log( '"customevent" has fired' );
-                        } );
-                    </code></pre>
-</section>
-
-<section>
-    <section data-background="#007777">
-        <h2>Slide Backgrounds</h2>
-
-        <p>
-            Set <code>data-background="#007777"</code> on a slide to change the full page background to the given color. All CSS color formats are supported.
-        </p>
-        <a href="#" class="image navigate-down">
-            <img width="178" height="238" src="https://s3.amazonaws.com/hakim-static/reveal-js/arrow.png" alt="Down arrow">
-        </a>
-    </section>
-    <section data-background="https://s3.amazonaws.com/hakim-static/reveal-js/arrow.png">
-        <h2>Image Backgrounds</h2>
-        <pre><code>&lt;section data-background="image.png"&gt;</code></pre>
-    </section>
-    <section data-background="https://s3.amazonaws.com/hakim-static/reveal-js/arrow.png" data-background-repeat="repeat" data-background-size="100px">
-        <h2>Repeated Image Backgrounds</h2>
-        <pre><code style="word-wrap: break-word;">&lt;section data-background="image.png" data-background-repeat="repeat" data-background-size="100px"&gt;</code></pre>
-    </section>
-</section>
-
-<section data-transition="linear" data-background="#4d7e65" data-background-transition="slide">
-    <h2>Background Transitions</h2>
-
-    <p>
-        Pass reveal.js the <code>backgroundTransition: 'slide'</code> config argument to make backgrounds slide rather than fade.
-    </p>
-</section>
-
-<section data-transition="linear" data-background="#8c4738" data-background-transition="slide">
-    <h2>Background Transition Override</h2>
-
-    <p>
-        You can override background transitions per slide by using <code>data-background-transition="slide"</code>.
-    </p>
-</section>
-
-<section>
-    <h2>Intergalactic Interconnections</h2>
-
-    <p>
-        You can link between slides internally,
-        <a href="#/2/3">like this</a>.
-    </p>
-</section>
-
-<section>
-    <section>
-        <h2>Fragmented Views</h2>
-
-        <p>Hit the next arrow...</p>
-
-        <p class="fragment">... to step through ...</p>
-        <ol>
-            <li class="fragment"><code>any type</code></li>
-            <li class="fragment"><em>of view</em></li>
-            <li class="fragment"><strong>fragments</strong></li>
-        </ol>
-
-        <aside class="notes">
-            This slide has fragments which are also stepped through in the notes window.
-        </aside>
-    </section>
-    <section>
-        <h2>Fragment Styles</h2>
-
-        <p>There's a few styles of fragments, like:</p>
-
-        <p class="fragment grow">grow</p>
-
-        <p class="fragment shrink">shrink</p>
-
-        <p class="fragment roll-in">roll-in</p>
-
-        <p class="fragment fade-out">fade-out</p>
-
-        <p class="fragment highlight-red">highlight-red</p>
-
-        <p class="fragment highlight-green">highlight-green</p>
-
-        <p class="fragment highlight-blue">highlight-blue</p>
-    </section>
-</section>
-
-<section>
-    <h2>Spectacular image!</h2>
-    <a class="image" href="http://lab.hakim.se/meny/" target="_blank">
-        <img width="320" height="299" src="http://s3.amazonaws.com/hakim-static/portfolio/images/meny.png" alt="Meny">
-    </a>
-</section>
-
-<section>
-    <h2>Export to PDF</h2>
-
-    <p>Presentations can be <a href="https://github.com/hakimel/reveal.js#pdf-export">exported to PDF</a>, below is an example that's been uploaded to SlideShare.</p>
-    <iframe id="slideshare" src="http://www.slideshare.net/slideshow/embed_code/13872948" width="455" height="356" style="margin:0;overflow:hidden;border:1px solid #CCC;border-width:1px 1px 0;margin-bottom:5px" allowfullscreen></iframe>
-    <script>
-        document.getElementById('slideshare').attributeName = 'allowfullscreen';
-    </script>
-</section>
-
-<section>
-    <h2>Take a Moment</h2>
-
-    <p>
-        Press b or period on your keyboard to enter the 'paused' mode. This mode is helpful when you want to take distracting slides off the screen
-        during a presentation.
-    </p>
 </section>
 </div>
 
