--- a/index.html
+++ b/index.html
@@ -293,6 +293,10 @@ class intellij ( $username ) {
 </section>
 <section>
     <section>
+        <h2>Getting started</h2>
+        <a href="https://github.com/MichaelBitard/chrootAnsible">https://github.com/MichaelBitard/chrootAnsible</a>
+    </section>
+    <section>
         <h2>Le mix Chroot/Ansible</h2>
         <ul>
             <li>Création de la chroot
@@ -316,14 +320,16 @@ class intellij ( $username ) {
             </li>
         </ul>
     </section>
-    <section>
-        <h2>Démo</h2>
-    </section>
 </section>
 
 <section>
     <h1>Conclusion</h1>
     <p>Il faut automatiser<strong class="fragment">...&nbsp;jusqu'à quel point?</strong></p>
+</section>
+<section>
+    <h1>Resources</h1>
+    <a href="https://github.com/MichaelBitard/chroot_presentation">https://github.com/MichaelBitard/chroot_presentation</a>
+    <a href="https://github.com/MichaelBitard/chrootAnsible">https://github.com/MichaelBitard/chrootAnsible</a>
 </section>
 </div>
 
