ajout de ssh au principe de fonctionnement d'ansible

--- a/index.html
+++ b/index.html
@@ -237,6 +237,7 @@ class intellij ( $username ) {
         <p>Installation sur le serveur (git clone)</p>
         <p>Déclaration des taches dans des fichiers .yml</p>
         <p>Regroupement des taches dans des playbooks</p>
+        <p>Lancement d'ansible via ssh</p>
     </section>
     <section>
         <h2>Ansible</h2>
